--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
 
     <color name="light_transparent">#73000000</color>
     <color name="goldenColor">#f7dc5f</color>
-    <color name="goldenColor1">#FBD212</color>
+    <color name="goldenColor1">#FF9800</color>
 
 
     <color name="baseColor">#1b1092</color>
