--- a/app/src/main/res/layout/activity_personal_details.xml
+++ b/app/src/main/res/layout/activity_personal_details.xml
@@ -276,6 +276,7 @@
                                 android:layout_marginLeft="15dp"
                                 android:layout_marginRight="15dp"
                                 android:background="@color/white"
+                                android:focusable="false"
                                 android:drawableEnd="@drawable/ic_calendar"
                                 android:ems="10"
                                 android:hint="Date of birth"
@@ -312,20 +313,31 @@
                         android:layout_marginLeft="15dp"
                         android:orientation="horizontal">
 
-                        <RadioButton
-                            android:layout_width="wrap_content"
+                        <RadioGroup
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Male"
-                            android:padding="5dp"
-                            android:textSize="15sp" />
+                            android:orientation="horizontal"
+                            android:id="@+id/radioGroup"
+                            >
 
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="15dp"
-                            android:text="Female"
-                            android:padding="5dp"
-                            android:textSize="15sp" />
+                            <RadioButton
+                                android:id="@+id/etMale"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Male"
+                                android:padding="5dp"
+                                android:textSize="15sp" />
+
+                            <RadioButton
+                                android:id="@+id/etFemale"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:text="Female"
+                                android:padding="5dp"
+                                android:textSize="15sp" />
+
+                        </RadioGroup>
 
 
                     </LinearLayout>
