--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,12 +46,36 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:textSize="16sp"
                     android:text="Dopfin"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
             </LinearLayout>
 
+
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:background="@color/baseColor"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/home_txt_bg"
+                android:gravity="center"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:padding="15dp"
+                android:text="Refer a friend and earn flat ₹50"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -65,25 +89,12 @@
                 android:layout_marginRight="12dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/home_txt_bg"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:text="Refer a friend and earn flat ₹50"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:elevation="15dp"
-                    app:cardCornerRadius="8dp"
+                    app:cardCornerRadius="10dp"
                     app:contentPadding="10dp">
 
                     <LinearLayout
@@ -101,6 +112,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:drawableEnd="@drawable/ic_baseline_info_24"
+                                android:drawableTint="@color/baseColor"
                                 android:text="Total borrowing limit" />
 
                             <TextView
@@ -108,9 +121,10 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:gravity="center"
+                                android:gravity="end"
                                 android:text="₹500 - ₹10000"
-                                android:textColor="@color/black" />
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
 
@@ -125,16 +139,19 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Available borrowing limit" />
+                                android:text="Available borrowing limit"
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/tvAvailableBorrowLimit"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:gravity="center"
-                                android:text="₹500 - ₹10000"
-                                android:textColor="@color/black" />
+                                android:gravity="end"
+                                android:text="₹0"
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -152,15 +169,111 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                        android:padding="5dp"
+                        android:weightSum="2">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="80dp"
+                            android:layout_weight=".8"
+                            android:src="@drawable/scholarship" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight=".4"
+                            android:textSize="16sp"
+                            android:layout_marginLeft="6dp"
+                            android:text="Dopfin Scholarship is here.\nCheck your eligibility!" />
+
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_weight=".8"
+                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
+
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:elevation="15dp"
+                    app:cardCornerRadius="5dp"
+                    app:contentPadding="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            app:tint="@color/baseColor"
+                            android:src="@drawable/money"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:text="Amount you want to borrow"/>
+
+                    </LinearLayout>
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Choose the amount"
+                            android:padding="10dp"
+                            android:layout_margin="12dp"
+                            android:drawableStart="@drawable/ic_baseline_currency_rupee_24"
+                            android:drawableTint="@color/baseColor"
+                            android:drawablePadding="10dp"
+                            android:background="@drawable/et_bg"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Request Loan"
+                            android:textColor="@color/white"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_margin="15dp"
+                            android:textSize="16sp"
+                            android:background="@drawable/button_bg"/>
+
+
+
+                    </LinearLayout>
+
+
+                    <!--<LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="I WANT"
-                            android:textStyle="bold"
                             android:textColor="@color/baseColor"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
 
                         <View
                             android:layout_width="60dp"
@@ -388,13 +501,13 @@
                             android:layout_marginTop="15sp"
                             android:background="@drawable/home_txt_bg"
                             android:gravity="center"
-                            android:textSize="15sp"
-                            android:textStyle="bold"
                             android:padding="15dp"
                             android:text="Request"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
 
-                    </LinearLayout>
+                    </LinearLayout>-->
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
