--- a/app/src/main/res/layout/activity_aadhar.xml
+++ b/app/src/main/res/layout/activity_aadhar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/baseColor"
     android:layout_height="match_parent"
-    tools:context=".Activity.LastExamMarksheetActivity">
+    tools:context=".Activity.AadharActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="5dp"
-                            android:text="Upload Documents &amp; Selfie Video"
+                            android:text="KYC Verification"
                             android:textColor="@color/white"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -70,7 +70,7 @@
                             android:layout_below="@id/text"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="10dp"
-                            android:text="Upload documents"
+                            android:text="Verify Your KYC"
                             android:textColor="@color/colorGray"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -119,9 +119,10 @@
 
             </LinearLayout>
 
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/textView"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="50dp"
@@ -136,169 +137,121 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:orientation="vertical">
 
-                    <TextView
+
+                    <!--<TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Upload Documents"
+                        android:text="Weclome !"
                         android:textColor="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
-
+-->
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="3dp"
-                        android:text="Upload documents for verification"
-                        android:textColor="@color/colorGray"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Address proof and pan card picture will be clean and readable"
-                        android:textColor="@color/colorGray"
+                        android:text="Select and upload your KYC document"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="15sp" />
 
-                    <androidx.cardview.widget.CardView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView"
-                        android:layout_margin="10dp"
-                        android:elevation="10dp"
+                        android:layout_marginTop="10dp"
                         android:visibility="gone"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="10dp">
+                        android:orientation="vertical">
 
 
-                        <LinearLayout
-                            android:id="@+id/linear"
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:paddingTop="13dp"
-                            android:paddingBottom="13dp"
-                            >
+                            android:textSize="15sp"
+                            android:text="KYC Document Type"/>
 
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="start"
-                                android:text="Last Exam Marksheet"
-                                android:textColor="@color/black"
-                                android:textStyle="bold" />
+                        <Spinner
+                            android:id="@+id/spn"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="20dp"
-                                android:background="@drawable/button_bg"
-                                android:paddingLeft="50dp"
-                                android:paddingTop="30dp"
-                                android:paddingRight="50dp"
-                                android:paddingBottom="30dp"
-                                android:text="Upload"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
+                    </LinearLayout>
 
-                    <androidx.cardview.widget.CardView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView"
-                        android:layout_margin="10dp"
-                        android:elevation="10dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="10dp">
+                        android:id="@+id/llVoterId"
+                        android:layout_marginTop="15dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:text="Front Photo"
+                            android:textColor="@color/black"
+                            android:textSize="20dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="(Please click demo image and upload your document)" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:paddingTop="13dp"
-                            android:paddingBottom="13dp">
+                            android:gravity="center"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Upload marksheet "
-                                android:layout_marginLeft="15dp"
-                                android:layout_marginTop="10dp"
-                                android:textStyle="bold"
-                                android:textColor="@color/black"
-                                android:textSize="20dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="(Please click demo image and upload your document)"
-                                android:layout_marginLeft="15dp"/>
                             <ImageView
-                                android:id="@+id/marksheet"
-                                android:layout_width="match_parent"
-                                android:layout_height="200dp"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="15dp"
-                                android:src="@drawable/marksheet"
-                                />
+                                android:id="@+id/ivAadharFont"
+                                android:layout_width="200dp"
+                                android:layout_height="130dp"
+                                android:layout_marginTop="5dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/aadhar_front" />
 
-                            <!--<TextView
+                            <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="start"
-                                android:text="Mark sheet of last exam"
+                                android:layout_marginTop="15dp"
+                                android:text="Back Photo"
                                 android:textColor="@color/black"
+                                android:textSize="20dp"
                                 android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="20dp"
-                                android:background="@drawable/button_bg"
-                                android:paddingLeft="50dp"
-                                android:paddingTop="30dp"
-                                android:paddingRight="50dp"
-                                android:paddingBottom="30dp"
-                                android:text="Upload Front"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />-->
+                            <ImageView
+                                android:id="@+id/ivAadharBack"
+                                android:layout_width="200dp"
+                                android:layout_height="130dp"
+                                android:layout_marginTop="5dp"
+                                android:src="@drawable/aadhar_back_new" />
                         </LinearLayout>
+                    </LinearLayout>
 
-                    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/btnSubmit"
+                        android:layout_width="match_parent"
+                        android:gravity="center"
+                        android:layout_margin="20dp"
+                        android:padding="10dp"
+                        android:background="@drawable/button_bg"
+                        android:textColor="@color/white"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:backgroundTint="#0D229A"
+                        android:text="SUBMIT" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tvContinue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/button_background"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:padding="10dp"
-                android:text="Continue"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:textStyle="bold" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
