--- a/app/src/main/res/layout/activity_driving_lisence.xml
+++ b/app/src/main/res/layout/activity_driving_lisence.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/baseColor"
     android:layout_height="match_parent"
-    tools:context=".Activity.LastExamMarksheetActivity">
+    android:background="@color/baseColor"
+    tools:context=".Activity.DrivingLisenceActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="5dp"
-                            android:text="Upload Documents &amp; Selfie Video"
+                            android:text="KYC Verification"
                             android:textColor="@color/white"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -70,7 +70,7 @@
                             android:layout_below="@id/text"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="10dp"
-                            android:text="Upload documents"
+                            android:text="Verify Your KYC"
                             android:textColor="@color/colorGray"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -119,9 +119,10 @@
 
             </LinearLayout>
 
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/textView"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="50dp"
@@ -136,169 +137,93 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center"
                     android:orientation="vertical">
 
+
+                    <!--<TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Weclome !"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+-->
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Upload Documents"
+                        android:text="Select and upload your KYC document"
                         android:textColor="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="3dp"
-                        android:text="Upload documents for verification"
-                        android:textColor="@color/colorGray"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Address proof and pan card picture will be clean and readable"
-                        android:textColor="@color/colorGray"
-                        android:textSize="15sp" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/textView"
-                        android:layout_margin="10dp"
-                        android:elevation="10dp"
-                        android:visibility="gone"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="10dp">
-
+                        android:layout_marginTop="10dp"
+                        android:orientation="vertical">
 
                         <LinearLayout
-                            android:id="@+id/linear"
+                            android:id="@+id/llDrivingLicence"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:paddingTop="13dp"
-                            android:paddingBottom="13dp"
-                            >
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="start"
-                                android:text="Last Exam Marksheet"
-                                android:textColor="@color/black"
-                                android:textStyle="bold" />
+                            android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="20dp"
-                                android:background="@drawable/button_bg"
-                                android:paddingLeft="50dp"
-                                android:paddingTop="30dp"
-                                android:paddingRight="50dp"
-                                android:paddingBottom="30dp"
-                                android:text="Upload"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/textView"
-                        android:layout_margin="10dp"
-                        android:elevation="10dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:paddingTop="13dp"
-                            android:paddingBottom="13dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Upload marksheet "
                                 android:layout_marginLeft="15dp"
                                 android:layout_marginTop="10dp"
-                                android:textStyle="bold"
+                                android:text="Upload Driving Licence (Optional) "
                                 android:textColor="@color/black"
-                                android:textSize="20dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="(Please click demo image and upload your document)"
-                                android:layout_marginLeft="15dp"/>
-                            <ImageView
-                                android:id="@+id/marksheet"
-                                android:layout_width="match_parent"
-                                android:layout_height="200dp"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="15dp"
-                                android:src="@drawable/marksheet"
-                                />
-
-                            <!--<TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="start"
-                                android:text="Mark sheet of last exam"
-                                android:textColor="@color/black"
+                                android:textSize="20dp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginTop="20dp"
-                                android:background="@drawable/button_bg"
-                                android:paddingLeft="50dp"
-                                android:paddingTop="30dp"
-                                android:paddingRight="50dp"
-                                android:paddingBottom="30dp"
-                                android:text="Upload Front"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />-->
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginBottom="5dp"
+                                android:text="(Please click demo image and upload your document)" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp"
+                                android:gravity="center"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:id="@+id/ivDrivingLisence"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="300dp"
+                                    android:layout_gravity="center"
+                                    android:layout_marginTop="15dp"
+                                    android:src="@drawable/driving" />
+                            </LinearLayout>
+
                         </LinearLayout>
 
-                    </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/btnSubmit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="20dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/button_bg"
+                        android:backgroundTint="#0D229A"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:text="SUBMIT"
+                        android:textColor="@color/white" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tvContinue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/button_background"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:padding="10dp"
-                android:text="Continue"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:textStyle="bold" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
