--- a/app/src/main/res/layout/activity_pan_card.xml
+++ b/app/src/main/res/layout/activity_pan_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/baseColor"
-    tools:context=".Activity.PanCardActivity">
+    tools:context=".Activity.AadharActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -142,27 +142,6 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/edit_text_background"
-                            android:focusable="true"
-                            android:focusableInTouchMode="true">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="15dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginRight="15dp"
-                                android:background="@drawable/edit_text_background"
-                                android:ems="10"
-                                android:hint="Enter your PAN"
-                                android:inputType="text"
-                                android:textColor="@color/black"
-                                android:textSize="15sp" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -189,6 +168,7 @@
                             android:layout_marginRight="20dp">
 
                             <ImageView
+                                android:id="@+id/ivPanFront"
                                 android:layout_width="200dp"
                                 android:layout_height="130dp"
                                 android:layout_marginTop="5dp"
@@ -205,20 +185,26 @@
                                 android:textStyle="bold" />
 
                             <ImageView
+                                android:id="@+id/ivPanBack"
                                 android:layout_width="wrap_content"
                                 android:layout_height="200dp"
                                 android:src="@drawable/panback" />
                         </LinearLayout>
 
 
-                        <Button
-                            android:id="@+id/kycsub"
-                            android:layout_width="200dp"
+                        <TextView
+                            android:id="@+id/btnSubmit"
+                            android:layout_width="match_parent"
+                            android:gravity="center"
+                            android:layout_margin="20dp"
+                            android:padding="10dp"
+                            android:background="@drawable/button_bg"
+                            android:textColor="@color/white"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="10dp"
                             android:backgroundTint="#0D229A"
-                            android:text="Submit" />
+                            android:text="SUBMIT" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
