--- a/app/src/main/res/layout/activity_passport.xml
+++ b/app/src/main/res/layout/activity_passport.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:background="@color/baseColor"
-    android:id="@+id/llCons"
-    tools:context=".Activity.UploadDocumentActivity">
+    android:layout_height="match_parent"
+    tools:context=".Activity.PassportActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -59,7 +58,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="5dp"
-                            android:text="Upload Documents &amp; Selfie Video"
+                            android:text="KYC Verification"
                             android:textColor="@color/white"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -71,7 +70,7 @@
                             android:layout_below="@id/text"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="10dp"
-                            android:text="Upload documents"
+                            android:text="Verify Your KYC"
                             android:textColor="@color/colorGray"
                             android:textSize="13sp"
                             android:textStyle="bold" />
@@ -120,15 +119,16 @@
 
             </LinearLayout>
 
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/textView"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="12dp"
-                android:elevation="10dp"
                 android:layout_marginBottom="10dp"
+                android:elevation="10dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="10dp"
                 app:contentPaddingBottom="2dp"
@@ -137,170 +137,179 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:orientation="vertical">
 
-                    <TextView
+
+                    <!--<TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Upload Documents"
+                        android:text="Weclome !"
                         android:textColor="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
-
+-->
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="3dp"
-                        android:text="Upload documents for verification"
-                        android:textColor="@color/colorGray"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Address proof and pan card picture will be clean and readable"
-                        android:textColor="@color/colorGray"
+                        android:text="Select and upload your KYC document"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="15sp" />
 
-
-
-                    <androidx.cardview.widget.CardView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/textView"
-                        android:layout_margin="10dp"
-                        android:elevation="10dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="10dp">
+                        android:layout_marginTop="10dp"
+                        android:orientation="vertical">
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:visibility="gone"
+                            android:text="KYC Document Type"/>
+
+                        <Spinner
+                            android:id="@+id/spn"
+                            android:visibility="gone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:id="@+id/llAadhar"
+                            android:visibility="gone"
                             android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginTop="20dp"
+                                android:text="Front Photo"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginBottom="5dp"
+                                android:text="(Please click demo image and upload your document)" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
-                                android:paddingLeft="10dp"
-                                android:paddingRight="10dp"
-                                android:paddingTop="13dp"
-                                android:paddingBottom="13dp">
+                                android:gravity="center"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp">
+
+                                <ImageView
+                                    android:id="@+id/ivAadharFont"
+                                    android:layout_width="200dp"
+                                    android:layout_height="130dp"
+                                    android:layout_marginTop="5dp"
+                                    android:scaleType="fitXY"
+                                    android:src="@drawable/aadhar_font" />
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="10dp"
-                                    android:gravity="start"
-                                    android:text="Address Proof Font/Back"
+                                    android:text="Back Photo"
                                     android:textColor="@color/black"
+                                    android:textSize="20dp"
                                     android:textStyle="bold" />
+
+                                <ImageView
+                                    android:id="@+id/ivAadharBack"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="200dp"
+                                    android:src="@drawable/aadhar_back_new" />
+                            </LinearLayout>
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/llPassport"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginTop="20dp"
+                                android:text="Front Photo"
+                                android:textColor="@color/black"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:layout_marginBottom="5dp"
+                                android:text="(Please click demo image and upload your document)" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:gravity="center"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginRight="20dp">
+
+                                <ImageView
+                                    android:id="@+id/ivPassport"
+                                    android:layout_width="200dp"
+                                    android:layout_height="130dp"
+                                    android:layout_marginTop="5dp"
+                                    android:scaleType="fitXY"
+                                    android:src="@drawable/passport" />
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="5dp"
-                                    android:text="(voter/passport/driving license/Aadhar Card)"
-                                    android:textColor="@color/colorGray"
-                                    android:textSize="12sp" />
+                                    android:layout_marginTop="10dp"
+                                    android:text="Back Photo"
+                                    android:visibility="gone"
+                                    android:textColor="@color/black"
+                                    android:textSize="20dp"
+                                    android:textStyle="bold" />
 
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginTop="5dp"
-                                    android:orientation="vertical">
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="(Please click demo image and upload your document)"/>
-                                    <ImageView
-                                        android:id="@+id/ivAddressProof"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="200dp"
-                                        android:layout_gravity="center"
-                                        android:layout_marginTop="15dp"
-                                        android:src="@drawable/addressproof"
-                                        />
-
-                                </LinearLayout>
-
-                                <!--<LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:orientation="horizontal"
-                                    android:padding="20dp"
-                                    android:weightSum="2">
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:layout_marginRight="2dp"
-                                        android:layout_weight="1"
-                                        android:background="@drawable/button_bg"
-                                        android:gravity="center"
-                                        android:paddingLeft="30dp"
-                                        android:paddingTop="30dp"
-                                        android:paddingRight="30dp"
-                                        android:paddingBottom="30dp"
-                                        android:text="Upload Front"
-                                        android:textColor="@color/white"
-                                        android:textSize="14sp" />
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="2dp"
-                                        android:layout_weight="1"
-                                        android:background="@drawable/button_bg"
-                                        android:gravity="center"
-                                        android:paddingLeft="30dp"
-                                        android:paddingTop="30dp"
-                                        android:paddingRight="30dp"
-                                        android:paddingBottom="30dp"
-                                        android:text="Upload Back"
-                                        android:textColor="@color/white"
-                                        android:textSize="14sp" />
-
-                                </LinearLayout>-->
-
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="200dp"
+                                    android:visibility="gone"
+                                    android:src="@drawable/panback" />
                             </LinearLayout>
+
                         </LinearLayout>
 
-                    </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/btnSubmit"
+                        android:layout_width="match_parent"
+                        android:gravity="center"
+                        android:layout_margin="20dp"
+                        android:padding="10dp"
+                        android:background="@drawable/button_bg"
+                        android:textColor="@color/white"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:backgroundTint="#0D229A"
+                        android:text="SUBMIT" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tvContinue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/button_background"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:padding="10dp"
-                android:text="Continue"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
