--- a/app/src/main/res/layout/activity_upload_college_id.xml
+++ b/app/src/main/res/layout/activity_upload_college_id.xml
@@ -198,6 +198,7 @@
                                 android:text="(Please click demo image and upload your document)"
                                 android:layout_marginLeft="15dp"/>
                             <ImageView
+                                android:id="@+id/ivCollegeId"
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
                                 android:layout_gravity="center"
