--- a/app/src/main/res/layout/activity_whats_app_verification.xml
+++ b/app/src/main/res/layout/activity_whats_app_verification.xml
@@ -482,6 +482,7 @@
                         android:layout_height="wrap_content"
                         android:text="SUBMIT"
                         android:gravity="center"
+                        android:visibility="gone"
                         android:padding="10dp"
                         android:textColor="@color/white"
                         android:id="@+id/btnContinue"
