--- a/app/src/main/res/layout/activity_selfie.xml
+++ b/app/src/main/res/layout/activity_selfie.xml
@@ -198,6 +198,7 @@
                                 android:layout_marginLeft="15dp"/>
 
                             <ImageView
+                                android:id="@+id/ivSelfie"
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
                                 android:layout_gravity="center"
