--- a/app/src/main/res/layout/activity_upload_signature_photo.xml
+++ b/app/src/main/res/layout/activity_upload_signature_photo.xml
@@ -201,6 +201,7 @@
                                 android:layout_marginLeft="15dp"/>
 
                             <ImageView
+                                android:id="@+id/ivSignature"
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
                                 android:layout_gravity="center"
